samples/_failures_safe/1761073033_a45b8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52db77fe.c: In function ‘main’:
./samples/SAFE/__tmp_52db77fe.c:140:12: error: missing terminating " character
  140 |     printf("\nMatrix B:\
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_52db77fe.c:140:5: error: expected expression at end of input
  140 |     printf("\nMatrix B:\
      |     ^~~~~~
./samples/SAFE/__tmp_52db77fe.c:140:5: error: expected declaration or statement at end of input
